receiver/output.txt
query.cpp: In function ‘bool passes_pk_constraints(std::string, Table_Row*)’:
query.cpp:300:66: error: cannot convert ‘__gnu_cxx::__alloc_traits<std::allocator<std::__cxx11::basic_string<char> >, std::__cxx11::basic_string<char> >::value_type’ {aka ‘std::__cxx11::basic_string<char>’} to ‘const char*’
  300 |             int pk_col_num = tbl->schema->getColumnNum(tbl->pk[j]);
      |                                                                  ^
In file included from query.h:3,
                 from query.cpp:1:
../dblayer/tbl.h:49:34: note:   initializing argument 1 of ‘int Schema::getColumnNum(const char*)’
   49 |     int getColumnNum(const char* name) {
      |                      ~~~~~~~~~~~~^~~~
query.cpp: In function ‘int execute_create(std::string, std::vector<ColumnDesc*>*, std::vector<std::__cxx11::basic_string<char>*>*)’:
query.cpp:400:30: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  400 |         int err = Table_Open("data.db", schema, false, &tbl);
      |                              ^~~~~~~~~
query.cpp: In function ‘int execute_insert(std::string, std::vector<std::__cxx11::basic_string<char>*>*)’:
query.cpp:461:13: error: redeclaration of ‘int table_num’
  461 |         int table_num = table_name_to_id[table_name];
      |             ^~~~~~~~~
query.cpp:421:13: note: ‘int table_num’ previously declared here
  421 |         int table_num = table_name_to_id[table_name];
      |             ^~~~~~~~~
